--- a/index.html
+++ b/index.html
@@ -1,101 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css"
-      type="text/css"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Press+Start+2P"
-      rel="stylesheet"
-    />
-    <link
-      href="https://unpkg.com/nes.css@latest/css/nes.min.css"
-      rel="stylesheet"
-    />
-    <title>Burauza no akachan</title>
-    <style>
-      body {
-        padding-bottom: 90px;
-      }
-      .nes-progress {
-        height: 25px;
-      }
-    </style>
-  </head>
-  <body>
-    <nav
-      style="padding: 20px; border-bottom: 3px solid #ccc; margin-bottom: 60px"
-    >
-      <div class="container">
-        <h2 style="margin-bottom: 0">
-          <i class="snes-jp-logo"></i>
-          ブラウザの赤ちゃん
-        </h2>
-      </div>
-    </nav>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <div class="display"></div>
 
-    <div class="container" style="margin-bottom: 50px">
-      <div class="row">
-        <div class="col">
-        </div>
-        <div class="col-sm-9 col-xs-12">
-          <div class="nes-balloon from-left">
-            <p style="color: #ff0000"><span>Burauza no akachan</span></p>
-            <div class="nes-field">
-                <label for="name_field">Your Browser Baby Name....</label>
-                <input type="text" id="name_field" class="nes-input">
-              </div>
-          </div>
-        </div>
-      </div>
-    </div>
-            
-        <!-- right      -->
-        <div class="col-md-8 col-sm-12 col-xs-12">
-          <div class="nes-container with-title">
-            <h3 class="title">Akachan Status</h3>
-            <div class="row">
-                <a class="nes-btn" href="#">Hunger</a>
-              <div class="col-sm-4 col-xs-12"></div>
-              <div class="col-sm-8 col-xs-12">
-                <progress
-                  class="nes-progress is-success"
-                  value="65"
-                  max="100"
-                ></progress>
-              </div>
-            </div>
-
-            <div class="row">
-                <a class="nes-btn" href="#">Sleep</a>
-              <div class="col-sm-4 col-xs-12"></div>
-              <div class="col-sm-8 col-xs-12">
-                <progress
-                  class="nes-progress is-error"
-                  value="25"
-                  max="100"
-                ></progress>
-              </div>
-            </div>
-
-            <div class="row"></div>
-
-            <div class="row">
-                <a class="nes-btn" href="#">Poop</a>
-              <div class="col-sm-4 col-xs-12"></div>
-              <div class="col-sm-8 col-xs-12">
-                <progress
-                  class="nes-progress is-pattern"
-                  value="50"
-                  max="100"
-                ></progress>
-              </div>
-            </div>
-          </div>
-        </body>
+  <script src="./assets/js/utility/momen.js"></script>
+  <script src="./assets/js/script.js"></script>
+</body>
 </html>
