--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <div class="display"></div>
 
   <script src="./assets/js/utility/momen.js"></script>
+  <!-- <script src="./assets/js/classes/PET.js"></script> -->
   <script src="./assets/js/script.js"></script>
 </body>
 </html>
