done with backbone view

--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
 </head>
 <body>
   <div class="display"></div>
-
+  <div class="interaction">
+    <button id="feed">Feed</button>
+    <button id="light">Light</button>
+    <button id="play">Play</button>
+    <button id="medicine">Medicine</button>
+    <button id="clean">clean</button>
+    <button id="stats">Stats</button>
+    <button id="discipline">Kanspiration</button>
+    <button id="attention">Idle View</button>
+    
+  </div>
   <script src="./assets/js/utility/momen.js"></script>
   <!-- <script src="./assets/js/classes/PET.js"></script> -->
   <script src="./assets/js/script.js"></script>
