--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
       </div>
       
       <div class=" col-12 col-md-2 text-center p-2 interaction">
-        <button class="nes-btn m-2 uiBtn" id="attention"><i class="fa-2x fa-solid fa-house"></i></button>
-        <button class="nes-btn m-2 uiBtn" id="feed"><i class="fa-2x fa-solid fa-drumstick-bite"></i></button>
-        <button class="nes-btn m-2 uiBtn" id="light"><i class="fa-2x fa-regular fa-lightbulb"></i></button>
-        <button class="nes-btn m-2 uiBtn" id="play"><i class="fa-2x snes-logo"></i></button>
-        <button class="nes-btn m-2 uiBtn" id="medicine"><i class="fa-2x fa-solid fa-briefcase-medical"></i></button>
-        <button class="nes-btn m-2 uiBtn" id="clean"><i class="fa-2x fa-solid fa-broom-ball"></i></button>
-        <button class="nes-btn m-2 uiBtn" id="stats"><i class="fa-2x fa-solid fa-weight-scale"></i></button>
-        <button class="nes-btn m-2 uiBtn" id="discipline"><i class="fa-2x fa-brands fa-rocketchat"></i></button>
+        <button class="nes-btn m-2 uiBtn" id="attention"><i class="fa-2x fa-solid fa-house uiBtn"></i></button>
+        <button class="nes-btn m-2 uiBtn" id="feed"><i class="fa-2x fa-solid fa-drumstick-bite uiBtn"></i></button>
+        <button class="nes-btn m-2 uiBtn" id="light"><i class="fa-2x fa-regular fa-lightbulb uiBtn"></i></button>
+        <button class="nes-btn m-2 uiBtn text-center" id="play"><i class="fa-2x snes-logo uiBtn"></i></button>
+        <button class="nes-btn m-2 uiBtn" id="medicine"><i class="fa-2x fa-solid fa-briefcase-medical uiBtn"></i></button>
+        <button class="nes-btn m-2 uiBtn" id="clean"><i class="fa-2x fa-solid fa-broom-ball uiBtn"></i></button>
+        <button class="nes-btn m-2 uiBtn" id="stats"><i class="fa-2x fa-solid fa-weight-scale uiBtn"></i></button>
+        <button class="nes-btn m-2 uiBtn" id="discipline"><i class="fa-2x fa-brands fa-rocketchat uiBtn"></i></button>
 
 
       </div>
