add music trigger button

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
   
         <h2 class='text-center' style="margin-bottom: 0">
-          <i class="snes-jp-logo"></i>
+          <i class="snes-jp-logo musicPlay"></i>
           ブラウザの赤ちゃん
         </h2>
       </div>
