--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -15,7 +16,7 @@
 </head>
 
 <body>
-  <nav style="" class=" container">
+  <nav class=" container">
     <!-- ! Game description -->
     <div class="row d-flex justify-content-center">
       <div class="col-10">
@@ -27,10 +28,21 @@
   
         <h2 class='text-center' style="margin-bottom: 0">
           <i class="snes-jp-logo musicPlay"></i>
-          ブラウザの赤ちゃん
+          ブラウザの赤ちゃん 
         </h2>
       </div>
     </div>
+    
+  </nav>
+  <main class="gamedisp container-sm">
+    
+    <div class="row container d-flex justify-content-center p-0 mt-5">
+      <div class="col-12 text-center" id="petName"></div>
+      <div id='displayContainer' class="nes-container is-rounded sprite-box col-12 col-md-10">
+
+        <div class="startGame"></div>
+
+        <div class="display">
 
         </div>
         <div class="poop" style="position:absolute;bottom:0;"></div>
@@ -45,36 +57,9 @@
         <button class="nes-btn m-2 uiBtn" id="clean"><i class="fa-2x fa-solid fa-broom-ball uiBtn"></i></button>
         <button class="nes-btn m-2 uiBtn" id="stats"><i class="fa-2x fa-solid fa-weight-scale uiBtn"></i></button>
         <button class="nes-btn m-2 uiBtn" id="discipline"><i class="fa-2x fa-brands fa-rocketchat uiBtn"></i></button>
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
-
-
-<<<<<<< HEAD
-      <div class="row">
-        <a>Poop</a>
-        <div class="col-sm-4 col-xs-12"></div>
-        <div class="col-sm-8 col-xs-12">
-          <progress class="nes-progress stat-bar" value="25" max="100"></progress>
-        </div>
-      </div>
-      <div class="row">
-        <a>Cleanliness</a>
-        <div class="col-sm-4 col-xs-12"></div>
-        <div class="col-sm-8 col-xs-12">
-          <progress class="nes-progress stat-bar" value="50" max="100"></progress>
-        </div>
-=======
->>>>>>> 107c1c091c87fbbce8e642aa02138bb36290c282
->>>>>>> 09c18c2d773550d8b1ec880a1f1493a23c5bf9b6
-=======
-
->>>>>>> c369b16f094b41973b15791d25c8f85550f61884
       </div>
     </div>
     <!-- ! display container -->
-
-
 
   </main>
 
