--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   
         <h2 class='text-center' style="margin-bottom: 0">
           <i class="snes-jp-logo musicPlay"></i>
-          ブラウザの赤ちゃん 
+          ブラウザの赤ちゃん <button class="nes-btn is-primary" onmousedown="gameMusic.play()"><i class="fa-solid fa-music"></i></button>
         </h2>
       </div>
     </div>
