updated readme file, removed old css, removed styling from html

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <!-- ! Game description -->
     <div class="row d-flex justify-content-center">
       <div class="col-10">
-        <div class="nes-container with-title is-centered is-rounded">
-          <h1 class="" style="color: red">Burauza no akachan</h1>
+        <div class="nes-container with-title is-centered is-rounded" id="header">
+          <h1>Burauza no akachan</h1>
           <p>Looking for a little companion? Look no further, Burauza No Akachan is what you’re looking for. Customize,
             play, feed, and take care of your browser baby.</p>
         </div>
